Fix usage of ConfigUtils.newInstance()